feat: finalizando endpoints de cliente e adição de entregador
