# src/server.ts
@@ -3,7 +3,8 @@ import cors from "cors";
 import swaggerUi from "swagger-ui-express";
 import swaggerJson from "./swagger.json" assert { type: "json"};
 
-import clientRoutes from "./route/client/clientRoutes.js"
+import clientRoutes from "./route/client/clientRoutes.js";
+import deliveryRoutes from "./route/delivery_rider/deliveryRoutes.js"
 import productsRouter from "./route/product/RouterProductController.js";
 import usersRouter from "./route/user/RouterUserController.js";
 import authRouter from "./route/auth/RouterAuthController.js";
@@ -18,6 +19,7 @@ app.use(express.json());
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerJson))
 
 app.use(clientRoutes);
+app.use(deliveryRoutes);
 app.use(productsRouter);
 app.use(usersRouter);
 app.use(authRouter)
